--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,8 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "lodash": ["lodash-es"],
-      "vue-qrcode": ["packages/vue-qrcode"],
-      "vue-qrious": ["packages/vue-qrious"]
+      "vue-qrcode": ["./packages/vue-qrcode"],
+      "vue-qrious": ["./packages/vue-qrious"]
     },
     "typeRoots": ["./node_modules/@types", "./node_modules/@d-ts"]
   },
