--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "description": "Make Vue greater with RxTS.",
   "repository": "git@github.com:rx-ts/vue.git",
-  "author": "JounQin <admin@1stg.me>",
+  "author": "JounQin (https://www.1stG.me) <admin@1stg.me>",
   "license": "MIT",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "build": "run-p build:*",
     "build:r": "r -e named -f cjs",
@@ -19,47 +20,38 @@
     "docs:serve": "vitepress serve . --port 8000",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
+    "lint:style": "stylelint . --cache",
     "lint:tsc": "vue-tsc --incremental false --noEmit",
     "prepare": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
     "prerelease": "yarn build",
     "release": "changeset publish",
-    "test": "jest",
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/app-config": "^3.5.0",
-    "@1stg/lib-config": "^5.5.0",
-    "@changesets/changelog-github": "^0.4.4",
-    "@changesets/cli": "^2.22.0",
+    "@1stg/app-config": "^6.0.0",
+    "@1stg/lib-config": "^8.0.0",
+    "@changesets/changelog-github": "^0.4.5",
+    "@changesets/cli": "^2.23.1",
     "@d-ts/vue": "^1.0.0",
-    "@types/jest": "^27.4.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^17.0.23",
+    "@types/node": "^18.0.3",
     "@types/qrcode": "^1.4.2",
-    "@vue/test-utils": "^2.0.0-rc.18",
     "lodash-es": "^4.17.21",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
     "qrcode": "^1.5.0",
     "qrious": "^4.0.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.3.0",
-    "sass": "^1.49.11",
-    "sass-loader": "^12.6.0",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.2.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "type-coverage": "^2.21.1",
-    "typescript": "^4.4.2",
-    "vitepress": "^0.22.3",
-    "vue": "^3.2.31",
-    "vue-tsc": "^0.33.9"
+    "rxjs": "^7.5.5",
+    "sass": "^1.53.0",
+    "type-coverage": "^2.22.0",
+    "typescript": "^4.7.4",
+    "vitepress": "^0.22.4",
+    "vue": "^3.2.37",
+    "vue-tsc": "^0.38.3",
+    "yarn-deduplicate": "^5.0.0"
   },
   "resolutions": {
-    "prettier": "^2.6.2"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "preset": "ts-jest"
+    "prettier": "^2.7.1"
   },
   "typeCoverage": {
     "atLeast": 100,
