feat: add new vue-resizor package

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "packageManager": "yarn@1.22.21",
   "scripts": {
     "build": "run-p build:*",
-    "build:r": "r -e named -f cjs",
+    "build:r": "r -e named -f cjs --vue-jsx",
+    "build:styles": "lessc --source-map packages/vue-resizor/src/styles.less packages/vue-resizor/lib/styles.css",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
     "docs:build": "vitepress build .",
-    "docs:dev": "vitepress dev .",
+    "docs:dev": "vitepress dev . --open",
     "docs:serve": "vitepress serve . --port 8000",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
@@ -29,13 +30,15 @@
   },
   "devDependencies": {
     "@1stg/app-config": "^10.0.1",
-    "@1stg/lib-config": "^13.0.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@d-ts/vue": "^1.0.0",
+    "@pkgr/rollup": "^6.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.8",
     "@types/qrcode": "^1.5.5",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "less": "^4.2.0",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.33",
     "qrcode": "^1.5.3",
@@ -45,6 +48,7 @@
     "sass": "^1.70.0",
     "type-coverage": "^2.27.1",
     "typescript": "^5.3.3",
+    "vite": "^5.0.12",
     "vitepress": "^0.22.4",
     "vue": "^3.4.15",
     "vue-tsc": "^1.8.27",
@@ -61,6 +65,7 @@
     "ignoreFiles": [
       "**/*.d.ts"
     ],
+    "ignoreNested": true,
     "ignoreNonNullAssertion": true,
     "showRelativePath": true,
     "strict": true,
