--- a/.eslintrc
+++ b/.eslintrc
@@ -4,16 +4,16 @@
   "overrides": [
     {
       "files": [
-        "*.ts",
-        "*.vue"
+        "*.{ts,tsx,vue}"
       ],
       "rules": {
+        "vue/multi-word-component-names": "off",
         "vue/require-default-prop": "off"
       }
     },
     {
       "files": [
-        "*.ts"
+        "*.{ts,tsx}"
       ],
       "rules": {
         "@typescript-eslint/consistent-type-imports": "error"
