--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "@1stg/stylelint-config"
+  "extends": "@1stg/stylelint-config",
+  "rules": {
+    "color-function-notation": null
+  }
 }
