--- a/packages/vue-qrious/package.json
+++ b/packages/vue-qrious/package.json
@@ -11,9 +11,12 @@
   "main": "./lib/index.cjs",
   "module": "./lib/index.js",
   "exports": {
-    "types": "./lib/index.d.ts",
-    "import": "./lib/index.js",
-    "require": "./lib/index.cjs"
+    ".": {
+      "types": "./lib/index.d.ts",
+      "require": "./lib/index.cjs",
+      "default": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "types": "./lib/index.d.ts",
   "files": [
