--- a/packages/vue-resizor/package.json
+++ b/packages/vue-resizor/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue-qrcode",
-  "version": "2.2.0",
+  "name": "vue-resizor",
+  "version": "0.0.0",
   "type": "module",
-  "description": "🤳 A Vue component for QR code generation with `qrcode`",
+  "description": "🖱 A Vue component for resizing with dragging",
   "repository": "git@github.com:rx-ts/vue.git",
-  "homepage": "https://github.com/rx-ts/vue/blob/master/packages/vue-qrcode",
+  "homepage": "https://github.com/rx-ts/vue/blob/master/packages/vue-resizor",
   "author": "JounQin (https://www.1stG.me) <admin@1stg.me>",
   "funding": "https://opencollective.com/rxts",
   "license": "MIT",
@@ -16,6 +16,7 @@
       "require": "./lib/index.cjs",
       "default": "./lib/index.js"
     },
+    "./styles.*": "./lib/styles.*",
     "./package.json": "./package.json"
   },
   "types": "./lib/index.d.ts",
@@ -24,12 +25,16 @@
     "!**/*.tsbuildinfo"
   ],
   "keywords": [
-    "vue-qrcode",
-    "qrcode",
+    "vue-drag-resizable",
+    "vue-drag-resize",
+    "vue-drag-resizer",
+    "vue-draggable",
+    "vue-resizable",
+    "vue-resize",
+    "vue-resizer",
     "vue"
   ],
   "peerDependencies": {
-    "qrcode": "^1.0.0",
     "vue": "^2.7.0 || ^3.0.0"
   },
   "dependencies": {
